#################################################################################
#                DBForge                                                        #
#                                                                               #
#    Copyright (C) 2003-2012 Institut National de Recherche en Informatique     #
#    et en Automatique. All rights reserved.                                    #
#                                                                               #
#    This program is free software; you can redistribute it and/or modify       #
#    it under the terms of the GNU Lesser General Public License version        #
#    3 as published by the Free Software Foundation.                            #
#                                                                               #
#    This program is distributed in the hope that it will be useful,            #
#    but WITHOUT ANY WARRANTY; without even the implied warranty of             #
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the              #
#    GNU General Public License for more details.                               #
#                                                                               #
#    You should have received a copy of the GNU General Public License          #
#    along with this program; if not, write to the Free Software                #
#    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA                   #
#    02111-1307  USA                                                            #
#                                                                               #
#    Contact: Maxence.Guesdon@inria.fr                                          #
#                                                                               #
#################################################################################

# check for one particular file of the sources
AC_INIT(master.Makefile.in)

VERSION=2.0
PACKAGE=ocamltop-gtk

# The root directory where we will compile
ROOT=`pwd`

ocaml unix.cma str.cma checkocaml.ml ocaml_config.sh || exit 1
. ./ocaml_config.sh

if test "$prefix" = "NONE" ; then
  prefix=`dirname $OCAMLBIN`
fi

if test "$datadir" = "\${datarootdir}" ; then
        datadir=${prefix}/share
fi
if test "$datadir" = "\${prefix}/share" ; then
        datadir=$prefix/share
fi

##########################
# OCaml src dir
##########################
OCAML_SRC_DIR=
AC_ARG_WITH(ocaml-src-dir,
[  --with-ocaml-src-dir=dir   Indicate the absolute path to ocaml compiled sources
],
[ OCAML_SRC_DIR="$withval"])

if test "$OCAML_SRC_DIR" = "" ; then \
  echo "FATAL: No OCaml compiled sources directory indicated"; \
  echo "please use the --with-ocaml-src-dir option" ; exit 1 ; \
fi

##########################
# debugging
##########################

DEBUG_LEVEL=0
AC_ARG_WITH(debug-level,
[  --with-debug-level=n   Set debug level to n [[default=0]]
],
[ DEBUG_LEVEL="$withval"])

echo Debug level is set to $DEBUG_LEVEL

#############################
# substitutions to perform
AC_SUBST(OCAMLC)
AC_SUBST(OCAMLOPT)
AC_SUBST(OCAMLDEP)
AC_SUBST(OCAMLLEX)
AC_SUBST(OCAMLYACC)
AC_SUBST(OCAMLBEST)
AC_SUBST(OCAMLVERSION)
AC_SUBST(OCAMLLIB)
AC_SUBST(OCAMLBIN)
AC_SUBST(OCAMLDOC)
AC_SUBST(OCAMLFIND)
AC_SUBST(EXEC_PREFIX)
AC_SUBST(ROOT)
AC_SUBST(DEBUG_LEVEL)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)
AC_SUBST(OCAML_SRC_DIR)

# Finally create the master.Makefile.in
ACFILES="master.Makefile META otop_messages.ml mk-ocamltop-gtk"
AC_OUTPUT($ACFILES)
chmod a-w master.Makefile
chmod a-w otop_messages.ml
chmod a-w META
chmod a-w mk-ocamltop-gtk


